<resources>
    <string name="app_name">TestTaskFromCompanyX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="profile">Profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_hav">Already have an account?</string>
    <string name="text_button_log_in">Log in</string>
    <string name="button_upload_item">Upload item</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="change_photo">Change photo</string>
    <string name="default_name">Satria Adhi Pradana</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_met">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_histo">Trade history</string>
    <string name="restore_pur">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="some_money">$ 1593</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_basket">Basket</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_profile">Profile</string>
    <string name="head_title">Trade by bata</string>
    <string name="header_page_one_1">Trade by</string>
    <string name="header_page_one_2">bata</string>
    <string name="error_input_first_name">Invalid first name</string>
    <string name="error_input_last_name">Invalid last name</string>
    <string name="error_input_email">Invalid email</string>
    <string name="error_input_first_name_or_password">Wrong login or password</string>
    <string name="user_exists">User exists</string>
    <string name="category_phones">Phones</string>
    <string name="latest_deals">Latest deals</string>
    <string name="flash_Sale">Flash Sale</string>
    <string name="brands">Brands</string>
    <string name="ic_dollar">$ </string>
    <string name="ic_present">% off</string>


</resources>