<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/menu_favorites"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/basket"
        android:icon="@drawable/ic_basket"
        android:title="@string/menu_basket"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_chat"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"
        app:showAsAction="withText"/>
</menu>