<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FAF9FF"
    tools:context=".presentation.fragment.LogInFragment">

    <TextView
        android:id="@+id/tv_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="121dp"
        android:text="@string/welcome_back"
        android:textAppearance="@style/sign_in"
        android:gravity="center_horizontal|top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle_2"
        android:hint="@string/first_name"
        android:gravity="center"
        android:textAppearance="@style/input_fields"
        app:layout_constraintEnd_toEndOf="@+id/tv_welcome_back"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome_back"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_back"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/rectangle_2"
        android:hint="@string/password"
        android:gravity="center"
        android:textAppearance="@style/input_fields"
        app:layout_constraintEnd_toEndOf="@+id/tv_welcome_back"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome_back"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name"/>

    <TextView
        android:id="@+id/bt_log_in"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_marginTop="99dp"
        android:background="@drawable/button"
        android:text="@string/text_button_log_in"
        android:gravity="center"
        android:textAppearance="@style/button_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password"/>


</androidx.constraintlayout.widget.ConstraintLayout>