<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_alignParentTop="true"
    android:overScrollMode="never"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_scrollFlags="scroll|enterAlways">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAF9FF"
        tools:context=".presentation.fragment.ProfileFragment">

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:gravity="center_horizontal|top"
            android:text="@string/profile"
            android:textAppearance="@style/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile"
            app:srcCompat="@drawable/ic_arrow_back" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_profile"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_marginTop="18dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_photo"
            app:layout_constraintEnd_toEndOf="@+id/profile"
            app:layout_constraintStart_toStartOf="@+id/profile"
            app:layout_constraintTop_toBottomOf="@+id/profile" />

        <TextView
            android:id="@+id/change_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_horizontal|top"
            android:text="@string/change_photo"
            android:textAppearance="@style/change_photo"
            app:layout_constraintEnd_toEndOf="@+id/image_profile"
            app:layout_constraintStart_toStartOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/image_profile" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:gravity="center_horizontal|top"
            android:text="@string/default_name"
            android:textAppearance="@style/profile_name"
            app:layout_constraintEnd_toEndOf="@+id/image_profile"
            app:layout_constraintStart_toStartOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/change_photo" />

        <TextView
            android:id="@+id/button_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/button_upload_item"
            android:textAppearance="@style/button_sign_in"
            android:gravity="center"
            android:background="@drawable/button_upload_item"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <ImageView
            android:id="@+id/ic_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="225dp"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="@+id/button_upload"
            app:layout_constraintEnd_toEndOf="@+id/button_upload"
            app:layout_constraintTop_toTopOf="@+id/button_upload" />


        <ImageView
            android:id="@+id/eclipse_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="14dp"
            android:src="@drawable/ic_ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_upload" />

        <ImageView
            android:id="@+id/ic_card_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_credit_card"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_1"
            app:layout_constraintEnd_toEndOf="@+id/eclipse_1"
            app:layout_constraintStart_toStartOf="@+id/eclipse_1"
            app:layout_constraintTop_toTopOf="@+id/eclipse_1" />

        <TextView
            android:id="@+id/tv_trade_store"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="6dp"
            android:gravity="center_horizontal|top"
            android:text="@string/trade_store"
            android:textAppearance="@style/profile_settings"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_1"
            app:layout_constraintStart_toEndOf="@+id/eclipse_1"
            app:layout_constraintTop_toTopOf="@+id/eclipse_1" />

        <ImageView
            android:id="@+id/ic_baseline_arrow_trade_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="166dp"
            android:layout_marginEnd="45dp"
            android:src="@drawable/ic_arrow_baseline"
            app:layout_constraintBottom_toBottomOf="@+id/tv_trade_store"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_trade_store"
            app:layout_constraintTop_toTopOf="@+id/tv_trade_store" />

        <ImageView
            android:id="@+id/eclipse_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eclipse_1" />

        <ImageView
            android:id="@+id/ic_card_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_credit_card"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_2"
            app:layout_constraintEnd_toEndOf="@+id/eclipse_2"
            app:layout_constraintStart_toStartOf="@+id/eclipse_2"
            app:layout_constraintTop_toTopOf="@+id/eclipse_2" />

        <TextView
            android:id="@+id/tv_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="6dp"
            android:gravity="center_horizontal|top"
            android:text="@string/payment_met"
            android:textAppearance="@style/profile_settings"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_2"
            app:layout_constraintStart_toEndOf="@+id/eclipse_2"
            app:layout_constraintTop_toTopOf="@+id/eclipse_2" />

        <ImageView
            android:id="@+id/ic_baseline_arrow_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_baseline"
            app:layout_constraintBottom_toBottomOf="@+id/tv_payment_method"
            app:layout_constraintEnd_toEndOf="@+id/ic_baseline_arrow_trade_store"
            app:layout_constraintTop_toTopOf="@+id/tv_payment_method" />

        <ImageView
            android:id="@+id/eclipse_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eclipse_2" />

        <ImageView
            android:id="@+id/ic_card_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_credit_card"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_3"
            app:layout_constraintEnd_toEndOf="@+id/eclipse_3"
            app:layout_constraintStart_toStartOf="@+id/eclipse_3"
            app:layout_constraintTop_toTopOf="@+id/eclipse_3" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="6dp"
            android:gravity="center_horizontal|top"
            android:text="@string/balance"
            android:textAppearance="@style/profile_settings"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_3"
            app:layout_constraintStart_toEndOf="@+id/eclipse_3"
            app:layout_constraintTop_toTopOf="@+id/eclipse_3" />

        <TextView
            android:id="@+id/ic_baseline_arrow_balance"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:gravity="center_horizontal|top"
            android:text="@string/some_money"
            android:textAppearance="@style/profile_settings"
            app:layout_constraintBottom_toBottomOf="@+id/tv_balance"
            app:layout_constraintEnd_toEndOf="@+id/ic_baseline_arrow_payment_method"
            app:layout_constraintTop_toTopOf="@+id/tv_balance" />

        <ImageView
            android:id="@+id/eclipse_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eclipse_3" />

        <ImageView
            android:id="@+id/ic_card_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_credit_card"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_4"
            app:layout_constraintEnd_toEndOf="@+id/eclipse_4"
            app:layout_constraintStart_toStartOf="@+id/eclipse_4"
            app:layout_constraintTop_toTopOf="@+id/eclipse_4" />

        <TextView
            android:id="@+id/tv_trade_history"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="6dp"
            android:gravity="center_horizontal|top"
            android:text="@string/trade_histo"
            android:textAppearance="@style/profile_settings"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_4"
            app:layout_constraintStart_toEndOf="@+id/eclipse_4"
            app:layout_constraintTop_toTopOf="@+id/eclipse_4" />

        <ImageView
            android:id="@+id/ic_baseline_arrow_trade_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_baseline"
            app:layout_constraintBottom_toBottomOf="@+id/tv_trade_history"
            app:layout_constraintEnd_toEndOf="@+id/ic_baseline_arrow_balance"
            app:layout_constraintTop_toTopOf="@+id/tv_trade_history" />

        <ImageView
            android:id="@+id/eclipse_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eclipse_4" />

        <ImageView
            android:id="@+id/ic_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_restore"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_5"
            app:layout_constraintEnd_toEndOf="@+id/eclipse_5"
            app:layout_constraintStart_toStartOf="@+id/eclipse_5"
            app:layout_constraintTop_toTopOf="@+id/eclipse_5" />

        <TextView
            android:id="@+id/tv_restore_purchase"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="6dp"
            android:gravity="center_horizontal|top"
            android:text="@string/restore_pur"
            android:textAppearance="@style/profile_settings"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_5"
            app:layout_constraintStart_toEndOf="@+id/eclipse_5"
            app:layout_constraintTop_toTopOf="@+id/eclipse_5" />

        <ImageView
            android:id="@+id/ic_baseline_arrow_restore_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_baseline"
            app:layout_constraintBottom_toBottomOf="@+id/tv_restore_purchase"
            app:layout_constraintEnd_toEndOf="@+id/ic_baseline_arrow_trade_history"
            app:layout_constraintTop_toTopOf="@+id/tv_restore_purchase" />

        <ImageView
            android:id="@+id/eclipse_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eclipse_5" />

        <ImageView
            android:id="@+id/ic_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_help"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_6"
            app:layout_constraintEnd_toEndOf="@+id/eclipse_6"
            app:layout_constraintStart_toStartOf="@+id/eclipse_6"
            app:layout_constraintTop_toTopOf="@+id/eclipse_6" />

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="6dp"
            android:gravity="center_horizontal|top"
            android:text="@string/help"
            android:textAppearance="@style/profile_settings"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_6"
            app:layout_constraintStart_toEndOf="@+id/eclipse_6"
            app:layout_constraintTop_toTopOf="@+id/eclipse_6" />

        <ImageView
            android:id="@+id/eclipse_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_ellipse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eclipse_6" />

        <ImageView
            android:id="@+id/ic_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_log_out"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_7"
            app:layout_constraintEnd_toEndOf="@+id/eclipse_7"
            app:layout_constraintStart_toStartOf="@+id/eclipse_7"
            app:layout_constraintTop_toTopOf="@+id/eclipse_7" />

        <TextView
            android:id="@+id/tv_log_out"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="6dp"
            android:gravity="center_horizontal|top"
            android:text="@string/log_out"
            android:textAppearance="@style/profile_settings"
            app:layout_constraintBottom_toBottomOf="@+id/eclipse_7"
            app:layout_constraintStart_toEndOf="@+id/eclipse_7"
            app:layout_constraintTop_toTopOf="@+id/eclipse_7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>